# cpisiModel

./: .gitignore  DAWNDUSK_STATE_SYNC.md  LICENSE.adoc  Makefile  README.adoc  THE_ROOT_DISSERTATION.adoc
.github/workflows/: deploy_gate.yml
00_spirit/logic/00_bereshit/: bereshit.omni
00_spirit/logic/axioms/: fundamentals.toml
00_spirit/scripture/: .health  root.omni
01_mind/randoms/: GASA_Community_Event_Proposals_Final.adoc  GASA_Event_Source_Archive.adoc  community_events.adoc
01_mind/witness/00_premise/: 00_the_l0_bedrock.adoc  02_the_primacy_of_the_word.adoc
01_mind/witness/01_proposal/: 02_the_locus_of_command.adoc  03_the_operational_fundamentals.adoc
02_body/00_hooks/: portal_ignite.sh
02_body/a-ladder/portal/: tunnel_config.yml
02_body/c-hybrid/data/: qa_invite.txt
02_body/c-hybrid/hooks/: portal_ignite.sh
02_body/c-hybrid/ssh/: cpisi_config
02_body/mobile_sandbox/: root.omni  sentinel_entry.sh
02_body/void/: court_runner.sh  mirror_structure.ts
THE_GAME/: README.adoc
THE_GAME/b-spiral/: Seanje-My-Turn.txt
THE_GAME/b-spiral/body/rust/: Cargo.toml  engine.config.toml
THE_GAME/b-spiral/body/rust/src/: interface.rs  kernel.rs  lib.rs  main.rs  primitives.rs  registry.rs
docs/standards/: 009_gem_instruction_set.adoc
scripture/: root.omni
witness/00_premise/: 00_the_l0_bedrock.adoc  01_the_scriptural_witness.adoc
witness/01_proposal/: 00_the_l0_immune_system.adoc  01_the_living_sliding_scale.adoc  03_the_operational_fundamentals.adoc
witness/02_argument/: 00_the_fullness_of_zero.adoc  01_the_unified_witness.adoc
(+30601 files in other folders)
