[package]
name = "game-engine"
version = "0.1.0"
edition = "2024"

# [BLOCK:ROOT] THE BODY: THE GAME OF LIFE ENGINE (CLI/NATIVE)
# #omni:key B-game-engine-manifest

[[bin]]
name = "cpisi-game"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
# Axiomatic Injection
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Native Performance
rayon = "1.10"

# Terminal Hardware (The CLI Gate)
crossterm = "0.28"

[profile.release]
# Optimize for the Small Step (WASM size)
opt-level = "s"
lto = true
